--- a/.github/workflows/frontend-release.yml
+++ b/.github/workflows/frontend-release.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Upload build results
         uses: actions/upload-artifact@v4
         with:
-          name: frontend-build
+          name: frontend_build
           path: dist
 
   deploy-testing:
@@ -85,7 +85,7 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: frontend-build
+          name: frontend_build
           path: dist
 
       - name: Upload to Object Storage
