[COUPLY-65]: feat: add get block info handler; feat: better code quality for blocker; feat: add db to blocker with different sql requests

--- a/.github/workflows/blocker-backend-release.yml
+++ b/.github/workflows/blocker-backend-release.yml
@@ -11,6 +11,6 @@ jobs:
     uses: ./.github/workflows/backend-service-release.yml
     with:
       service_name: blocker
-      needs_migrations: false
+      db_name: blocker
       instance_group_name: blocker-testing
     secrets: inherit
