--- a/backend/blocker/configs/tests.yaml
+++ b/backend/blocker/configs/tests.yaml
@@ -1,3 +1,11 @@
 logging:
   level: info
   format: console
+
+database:
+  host: db
+  port: 5432
+  user: user
+  password: pass
+  database: blocker
+  options: sslmode=disable
