--- a/.github/workflows/frontend-release.yml
+++ b/.github/workflows/frontend-release.yml
@@ -90,6 +90,7 @@ jobs:
         with:
           build-dir: frontend/dist
           s3-bucket: couply-frontend-testing
+          yc-service-key: ${{ secrets.YC_SERVICE_KEY }}
 
   publish-release:
     name: Create GitHub Release
