--- a/.github/actions/upload-s3/action.yml
+++ b/.github/actions/upload-s3/action.yml
@@ -52,13 +52,7 @@ runs:
         SECRET_KEY=$(/opt/yc/bin/yc lockbox payload get --name aws-testing --key aws-secret-key)
         ./mc alias set ycs3 https://storage.yandexcloud.net $ACCESS_KEY $SECRET_KEY
 
-    - name: Debug build directory
-      shell: bash
-      run: |
-        echo "Listing build dir:"
-        ls -lR ./
-
     - name: Deploy to MinIO
       shell: bash
       run: |
-        ./mc cp -r ./${{ inputs.build-dir }}/* ycs3/${{ inputs.s3-bucket }}/
+        ./mc cp -r ./${{ inputs.artifact-path }}/* ycs3/${{ inputs.s3-bucket }}/
