[COUPLY-92] add manual pushes add x-api-key services auth fix pushes mechanic

--- a/backend/notificator/configs/base.yaml
+++ b/backend/notificator/configs/base.yaml
@@ -19,3 +19,8 @@ database:
   password: pass
   database: notificator
   options: sslmode=disable
+
+secrets:
+  ids:
+    web-push-api: e6q2fjskiam5gqb224ss
+    x-api-key: e6qrit49b41qnhsrfa8u
