[COUPLY-77] implement refresh tokens

--- a/backend/auth/configs/base.yaml
+++ b/backend/auth/configs/base.yaml
@@ -26,6 +26,7 @@ phone-confirmation:
 
 jwt:
   tokenLifetime: 30m
+  refreshTokenLifetime: 24h
 
 oauth:
   oAuthRedirectFrontendDomain: https://testing.couply.ru
