--- a/backend/payments/configs/testing.yaml
+++ b/backend/payments/configs/testing.yaml
@@ -18,3 +18,6 @@ secrets:
   ids:
     db: e6qoug3fau0c6bhsj20i
     token: e6qo9u8d7n70ciqo8omk
+
+user_service:
+  address: "matcher.testing.couply.ru:5051"
