--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/serviceworker": "^0.0.135",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.0.8",
@@ -87,7 +88,7 @@
     "storybook": "^8.6.4",
     "testplane": "^8.28.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.2",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
     "vite-plugin-pwa": "^0.21.1",
