--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "test-storybook:coverage": "test-storybook --coverage"
   },
   "dependencies": {
+    "@vkid/sdk": "<3.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
