--- a/backend/matcher/configs/testing.yaml
+++ b/backend/matcher/configs/testing.yaml
@@ -19,6 +19,7 @@ secrets:
     db: e6qoug3fau0c6bhsj20i
     token: e6qo9u8d7n70ciqo8omk
     aws: e6q98r233qa96qq01il3
+    sqs: e6q11avjgsnllkss9nqr
 
 s3:
   endpoint: storage.yandexcloud.net
