--- a/backend/auth/configs/base.yaml
+++ b/backend/auth/configs/base.yaml
@@ -35,6 +35,7 @@ secrets:
   ids:
     smsru: e6qeb7ef6o0sgb12n3r0
     yandex-id-oauth: e6qqk1qrp2mbbsuamdv5
+    telegram-gateway-api-key: e6q3563gp4esqij0qb60
 
 smsru:
   test: true
