[COUPLY-122] implement valkey based rate limiting

--- a/backend/auth/configs/base.yaml
+++ b/backend/auth/configs/base.yaml
@@ -39,3 +39,9 @@ secrets:
 
 smsru:
   test: true
+
+valkey-rate-limiter:
+  address: rc1a-pi1hru1ucks0jq68.mdb.yandexcloud.net:26379
+  limit: 5
+  window: 5s
+  keyPrefix: auth_rate_limit
