--- a/backend/auth/configs/base.yaml
+++ b/backend/auth/configs/base.yaml
@@ -36,6 +36,13 @@ secrets:
     smsru: e6qeb7ef6o0sgb12n3r0
     yandex-id-oauth: e6qqk1qrp2mbbsuamdv5
     telegram-gateway-api-key: e6q3563gp4esqij0qb60
+    valkey: e6q7cfv4omf0tff4mvec
 
 smsru:
   test: true
+
+valkey-rate-limiter:
+  address: rc1a-pi1hru1ucks0jq68.mdb.yandexcloud.net:26379
+  limit: 5
+  window: 5s
+  keyPrefix: auth_rate_limit
