func tests fixes

--- a/.github/workflows/backend-service-release.yml
+++ b/.github/workflows/backend-service-release.yml
@@ -106,6 +106,7 @@ jobs:
     needs:
       - codegen
       - test-unit
+      - test-functional
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
