--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -32,7 +31,6 @@ jobs:
         run: npm run build
 
   test:
-    name: Test
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -58,7 +56,6 @@ jobs:
         run: npm run test-storybook
 
   eslint:
-    name: ESLint
     runs-on: ubuntu-latest
     timeout-minutes: 5
     defaults:
@@ -103,14 +100,11 @@ jobs:
       - name: Check formatting
         run: npm run format:check
 
-  success:
-    name: CI success
+  lint:
+    runs-on: ubuntu-latest
     needs:
-      - build
-      - test
       - eslint
       - format
-    runs-on: ubuntu-latest
     steps:
       - name: Success
-        run: echo "All required checks passed!"
+        run: echo "required check passed!"
